[package]
name = "entry"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
sqlite = "0.27.0"
uuid = { version = "1.1.2", features = ["v4", "serde"]}
